--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -7,9 +7,9 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Josefin Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #fff;
-    background-color: #000;
+    background-color: #8A0808;
 }
 
 html {
@@ -23,9 +23,8 @@ h3,
 h4,
 h5,
 h6 {
-    margin: 0 0 35px;
-    text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    margin: 0 0 35px;    
+    font-family: "Great Vibes","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
 }
@@ -66,7 +65,7 @@ a:focus {
     border-bottom: 1px solid rgba(255,255,255,.3);
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    background-color: #000;
+    background-color: #8A0808;
 }
 
 .navbar-custom .navbar-brand {
@@ -81,6 +80,10 @@ a:focus {
     padding: 4px 6px;
     font-size: 16px;
     color: #fff;
+    text-shadow: -1px -1px 0 #000,
+    1px -1px 0 #000,
+   -1px 1px 0 #000,
+    1px 1px 0 #000;
 }
 
 .navbar-custom .navbar-brand .navbar-toggle:focus,
@@ -90,6 +93,10 @@ a:focus {
 
 .navbar-custom a {
     color: #fff;
+    text-shadow: -1px -1px 0 #000,
+    1px -1px 0 #000,
+   -1px 1px 0 #000,
+    1px 1px 0 #000;
 }
 
 .navbar-custom .nav li.active {
@@ -123,7 +130,7 @@ a:focus {
 
     .top-nav-collapse {
         padding: 0;
-        background-color: #000;
+        background-color: #8A0808;
     }
 
     .navbar-custom.top-nav-collapse {
@@ -138,8 +145,8 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
-    background-color: #000;
+    background: url(../img/recortada6-2.jpg) no-repeat bottom center scroll;
+    background-color: #8A0808;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -151,12 +158,20 @@ a:focus {
     vertical-align: middle;
 }
 
+.intro .intro-body .opac {    
+    padding: 18px;
+    /* Fallback for web browsers that doesn't support RGBa */
+    background: rgb(0, 0, 0);
+    /* RGBa with 0.7 opacity */
+    background: rgba(0, 0, 0, 0.3);
+}
+
 .intro .intro-body .brand-heading {
-    font-size: 40px;
+    font-size: 40px;    
 }
 
 .intro .intro-body .intro-text {
-    font-size: 18px;
+    font-size: 18px;    
 }
 
 @media(min-width:767px) {
@@ -166,11 +181,13 @@ a:focus {
     }
 
     .intro .intro-body .brand-heading {
-        font-size: 100px;
+        font-size: 90px;
+        opacity: 1;
     }
 
     .intro .intro-body .intro-text {
-        font-size: 25px;
+        font-size: 22px;
+        opacity: 1;
     }
 }
 
