--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -145,7 +145,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(../img/recortada6-2.jpg) no-repeat bottom center scroll;
+    background: url(../img/recortada6-2.jpg) no-repeat bottom left scroll;
     background-color: #8A0808;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -289,7 +289,8 @@ a:focus {
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 250px;
+        padding-top: 120px;
+        padding-bottom: 170px;
     }
 
     .download-section {
