--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -27,6 +27,7 @@ h6 {
     font-family: "Great Vibes","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
+    font-size: 40px;
 }
 
 p {
@@ -44,7 +45,7 @@ p {
 }
 
 a {
-    color: #219ab3;
+    color: #08262C;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
@@ -158,14 +159,6 @@ a:focus {
     vertical-align: middle;
 }
 
-.intro .intro-body .opac {    
-    padding: 18px;
-    /* Fallback for web browsers that doesn't support RGBa */
-    background: rgb(0, 0, 0);
-    /* RGBa with 0.7 opacity */
-    background: rgba(0, 0, 0, 0.3);
-}
-
 .intro .intro-body .brand-heading {
     font-size: 40px;    
 }
@@ -269,11 +262,11 @@ a:focus {
     padding-top: 100px;
 }
 
-.download-section {
+.content-bk-section {
     width: 100%;
     padding: 50px 0;
     color: #fff;
-    background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
+    background: url(../img/paradorAlcala.jpg) no-repeat top center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -293,8 +286,9 @@ a:focus {
         padding-bottom: 170px;
     }
 
-    .download-section {
-        padding: 100px 0;
+    .content-bk-section {
+        padding-top: 120px;
+        padding-bottom: 200px;
     }
 
     #map {
@@ -378,4 +372,16 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
+}
+
+.opac {    
+    padding: 18px;
+    /* Fallback for web browsers that doesn't support RGBa */
+    background: rgb(0, 0, 0);
+    /* RGBa with 0.7 opacity */
+    background: rgba(0, 0, 0, 0.3);
+}
+
+.opac ul li {
+    font-size: 22px;
 }
