--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -45,7 +45,7 @@ p {
 }
 
 a {
-    color: #08262C;
+    color: #F7FE2E;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
@@ -54,7 +54,7 @@ a {
 a:hover,
 a:focus {
     text-decoration: none;
-    color: #11505d;
+    color: #AEB404;
 }
 
 .light {
@@ -307,17 +307,17 @@ a:focus {
 }
 
 .btn-default {
-    border: 1px solid #219ab3;
-    color: #219ab3;
+    border: 1px solid #FF8000;
+    color: #FF8000;
     background-color: transparent;
 }
 
 .btn-default:hover,
 .btn-default:focus {
-    border: 1px solid #219ab3;
+    border: 1px solid #FF8000;
     outline: 0;
     color: #000;
-    background-color: #219ab3;
+    background-color: #FF8000;
 }
 
 ul.banner-social-buttons {
