--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -19,7 +19,6 @@ html {
 
 h1,
 h2,
-h3,
 h4,
 h5,
 h6 {
@@ -30,10 +29,22 @@ h6 {
     font-size: 40px;
 }
 
+h3 {
+    margin: 0 0 35px;    
+    font-family: "Great Vibes","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 700;
+    letter-spacing: 1px;
+    font-size: 28px;
+}
+
 p {
     margin: 0 0 25px;
     font-size: 18px;
     line-height: 1.5;
+}
+
+.p-little {
+    font-size: 16px;    
 }
 
 @media(min-width:767px) {
@@ -41,6 +52,10 @@ p {
         margin: 0 0 35px;
         font-size: 20px;
         line-height: 1.6;
+    }
+
+    .p-little {
+        font-size: 18px;    
     }
 }
 
